app/assets/stylesheets/pages/single_events.css.scss
.single_events_show {
  .single-event{
    margin-top: 0;
    .event-indicator{
      @include grid-row();

      background: #eaeaea;
      padding: 0 0 10px 0;

      h2 {
        @include grid-column(8);
        font-size: $h5-font-size;
        margin: 0;
        padding-top: 10px;
      }

      a {
        @include grid-column(4);
        color: $body-font-color;
        text-align: right;
      }
      .indicator{
        height: 5px;
        @include grid-column(5);
        margin-bottom: 0;
      }
    }
    .event-title{
      h1 {
        float: left;
        font-size:$h2-font-size;
        margin: 0px 20px;
      }
      h4 {
        float: right;
        font-size:$h4-font-size;
        font-weight: 300;
        margin-top: 13px;
        text-align: right;
      }

      border-bottom: 1px solid #eaeaea;
      margin-top: 5px;
      padding-bottom: 5px;

      .indicator-wrapper {
        margin-left: 20px;
        margin-right: 10px;
        float: left;
      }

      .indicator {
        margin: 5px 0px;
        width: 5px;
        height: 50px;
      }
    }
    .event-content {
      h4 {
        margin-top: 10px;
        font-weight: bold;
      }

      .event-description {
        h1, h2, h3, h4, h5, h6 {
          font-size: 1.2em;
          font-weight: bold;
          margin: 5px 0px;
        }
      }

      .event-text {
        h2 {
          font-size: 1.2em;
          font-weight: bold;
          margin: 5px 0px;
        }
      }

      .event-url-list {
        margin: 15px 0px 20px 20px;
      }

      .event-image {
        max-width: 350px;
        max-height: 350px;
        margin-bottom: 10px;
      }

      .hashtag {
        text-align: center;
        display: inline-block;
        width: 15px;
      }

      .event-venue {
        .event-venue-map {
          height: 300px;

          #mapCanvas {
            width: 100%;
            height: 100%;
          }
        }
      }
    }
    .admin_edit_link {
      margin: 10px 0px;
    }
  }
}

